Fixed starting position spacing

--- a/src/components/Features/features.css
+++ b/src/components/Features/features.css
@@ -2,7 +2,16 @@
   background:black;
   width: 100%;
 }
+
 .features-wrapper > .scrollmagic-pin-spacer:first-child {
   padding-bottom: 300px !important;
 
+}
+
+.scroll-margin-features {
+  scroll-margin: 235px;
+}
+
+.space-squiggle {
+  padding-top: 10px;
 }
